Fikser feil i mapping som gjør at hjemler blir null istedenfor tom liste. (#839)
Fjerner felter som ikke brukes.